fix scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -124,6 +124,7 @@ margin: 0;
     transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
     overflow-y: scroll;
     -webkit-overflow-scrolling: touch;
+    box-sizing: border-box;
   }
 
   .newsfeed .closebtn {
